[Java 17] Update src/main/java/com/example/java8/memory/PermGenMemoryManager.java from Jira ticket JAVA-115
- Timestamp: 2024-12-05 16:18:58
- Source: Jira code review
- Ticket: JAVA-115
- File: src/main/java/com/example/java8/memory/PermGenMemoryManager.java
- Branch: testing
- Type: Java 17 conversion